@@ -1,6 +1,7 @@
 version 0.74.01
 	buffer window bugfixes
 	Removing hardwired version number from pktriggercord.glade
+	Adding 1/2 EV shutter speed table to GUI
 
 version 0.74.00 ( 2011-06-21 )
 	code cleanup: eliminating id2
